# scribble-vk

./: .gitignore  CLAUDE.md  Cargo.toml  config.toml
shaders/: shader.frag  shader.vert
src/: app.rs  config.rs  demo.rs  main.rs  types.rs
src/vulkan/: buffer.rs  command.rs  context.rs  device.rs  helpers.rs  image.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  pipeline.rs  renderer.rs  swapchain.rs  sync.rs
