[package]
name = "Scribble"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
cgmath = "0.18"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
vulkanalia = { version = "=0.33.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"

